@@ -33,6 +33,12 @@
           %span.attr-name Created at:
           #{@commit.created_at.to_s(:short)}
 
+- if current_user && current_user.has_developer_access?(@project.gitlab_id)
+  .pull-right
+    - if @commit.builds.running_or_pending.any?
+      = link_to "Cancel", cancel_project_ref_commit_path(@project, @commit.ref, @commit.sha), class: 'btn btn-sm btn-danger'
+
+
 - if @commit.yaml_errors.present?
   .bs-callout.bs-callout-danger
     %h4 Found errors in your .gitlab-ci.yml:
