@@ -37,6 +37,7 @@ Rails.application.routes.draw do
       resources :commits, only: [:show] do
         member do
           get :status
+          get :cancel
         end
       end
     end
