@@ -18,6 +18,15 @@ describe "Commits" do
       it { page.should have_content @commit.git_commit_message }
       it { page.should have_content @commit.git_author_name }
     end
+
+    describe "Cancel commit" do
+      it "cancels commit" do
+        visit project_ref_commit_path(@project, @commit.ref, @commit.sha)
+        click_on "Cancel"
+
+        page.should have_content "canceled"
+      end
+    end
   end
 
   context "Public pages" do
