@@ -1,5 +1,6 @@
 v7.13.0
   - Fix: No runner notification can see managers only
+  - Ability to cancel all builds in commit at once
 
 v7.12.1
   - Runner without tag should pick builds without tag only
